--- a/docker-php/multiple-linear-regression-xsimple1-new.ipynb
+++ b/docker-php/multiple-linear-regression-xsimple1-new.ipynb
@@ -729,6 +729,7 @@
     "Ttable = stats.t.ppf(1-0.025,11)\n",
     "TX1 = results.tvalues['X1']\n",
     "TX2 = results.tvalues['X2']\n",
+    "TX3 = results.tvalues['X3']\n",
     "print(Ttable)\n",
     "print(TX1)\n",
     "print(TX2)\n",
